force-app/main/default/objects/Forecast_Summary__c/Forecast_Summary__c.object-meta.xml
<CustomObject>
    <label>Forecast Summary</label>
    <pluralLabel>Forecast Summaries</pluralLabel>
    <nameField>
        <label>Forecast Summary Number</label>
        <type>AutoNumber</type>
        <displayFormat>FS-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>