force-app/main/default/objects/Forecast_Summary__c/fields/Category_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_API_Name__c</fullName>
    <label>Category API Name</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>