force-app/main/default/objects/Forecast_Summary__c/fields/Effective_Value__c.field-meta.xml
<CustomField>
    <fullName>Effective_Value__c</fullName>
    <label>Effective Value</label>
    <type>Currency</type>
    <formula
  >IF(Override_Value__c != null, Override_Value__c, Computed_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>