force-app/main/default/objects/Forecast_Summary__c/fields/Forecast_Group__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Group__c</fullName>
    <label>Forecast Group</label>
    <referenceTo>Forecast_Group__c</referenceTo>
    <relationshipName>Forecast_Summaries</relationshipName>
    <relationshipLabel>Forecast Summaries</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>