force-app/main/default/objects/Forecast_Summary__c/fields/Forecast_Participant__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Participant__c</fullName>
    <label>Forecast Participant</label>
    <referenceTo>Forecast_Participant__c</referenceTo>
    <relationshipName>Forecast_Summaries</relationshipName>
    <relationshipLabel>Forecast Summaries</relationshipLabel>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>