force-app/main/default/objects/Forecast_Summary__c/fields/Metric_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Metric_Sort_Order__c</fullName>
    <label>Metric Sort Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>