force-app/main/default/objects/Forecast_Summary__c/fields/Override_By__c.field-meta.xml
<CustomField>
    <fullName>Override_By__c</fullName>
    <label>Override By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecast_Summaries_Override_By</relationshipName>
    <relationshipLabel>Forecast Summaries (Override By)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>