force-app/main/default/objects/Forecast_Summary__c/fields/Override_Notes__c.field-meta.xml
<CustomField>
    <fullName>Override_Notes__c</fullName>
    <label>Override Notes</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>