force-app/main/default/objects/Forecast_Summary__c/fields/Override_Value__c.field-meta.xml
<CustomField>
    <fullName>Override_Value__c</fullName>
    <label>Override Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>